--- a/styles/hero.css
+++ b/styles/hero.css
@@ -66,6 +66,18 @@
   cursor: pointer;
 }
 
+.open-edit-form-button2 {
+  position: absolute;
+  margin-top: 10px;
+  right: 10px;
+  background-color: var(--back-color);
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   .hero {
     flex-direction: column;
